--- a/templates/_layout_classic.twig
+++ b/templates/_layout_classic.twig
@@ -4,7 +4,7 @@
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
     <link rel="stylesheet" href="assets/classic/css/layout1.css" type="text/css" />
     <link rel="stylesheet" href="assets/classic/css/default.css" type="text/css" />
-    <link rel="shortcut icon" href="assets/classic/favicon.ico?v=2" />
+    <link rel="shortcut icon" href="assets/classic/favicon.ico" />
     <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
     <script src="assets/classic/default.js"></script>
     <title>Montreal In Darkness</title>
